TTL for change-requested and RFC commits
Summary: now it's based on date of patch and equal to 1d

Test Plan:

Reviewers:

Subscribers:

Tasks:

Tags:

--- a/travis-ci/pw-validator/config.json
+++ b/travis-ci/pw-validator/config.json
@@ -26,6 +26,6 @@
                 "ci_branch": "master"
             }
         },
-        "github_oauth_token": "e79f156f319eec617b85a6cccb7978a7dc0bc293"
+        "github_oauth_token": "e2fdgsdfgsdsfgdsgdfsdfg"
     }
 }
