Fix TTL for expirable series
also few minor things:
- using 3way merge
- added timestamps to log to trace lagging
- .gitignore
- get rid of legacy

Summary:

Test Plan:

Reviewers:

Subscribers:

Tasks:

Tags:

--- a/sources/config.json
+++ b/sources/config.json
@@ -26,6 +26,6 @@
                 "ci_branch": "master"
             }
         },
-        "github_oauth_token": "e2fdgsdfgsdsfgdsgdfsdfg"
+        "github_oauth_token": "efdgdfgfgddfgfgddfg"
     }
 }
