--- a/sources/config.json
+++ b/sources/config.json
@@ -1,31 +1,31 @@
 {
-    "git@github.com:tsipa/bpf-next": {
+    "git@github.com:kernel-patches/bpf": {
         "branches": {
             "bpf-next": {
                 "pw_search_patterns": [
-                    {"archived": false, "q": "bpf-next", "delegate": 77147}
+                    {"archived": false, "delegate": 77147}
                 ],
                 "filter_tags": ["bpf"],
                 "upstream": "https://git.kernel.org/pub/scm/linux/kernel/git/bpf/bpf-next.git",
                 "upstream_branch": "master",
                 "pw_url": "https://patchwork.ozlabs.org/",
                 "pw_lookback": 7,
-                "ci_repo": "git@github.com:tsipa/bpf-tests",
+                "ci_repo": "git@github.com:kernel-patches/vmtest",
                 "ci_branch": "master"
             },
             "bpf": {
                 "pw_search_patterns": [
-                    {"archived": false, "q": "bpf", "delegate": 77147}
+                    {"archived": false, "delegate": 77147}
                 ],
                 "filter_tags": ["bpf-next"],
                 "upstream": "https://git.kernel.org/pub/scm/linux/kernel/git/bpf/bpf.git",
                 "upstream_branch": "master",
                 "pw_url": "https://patchwork.ozlabs.org/",
                 "pw_lookback": 7,
-                "ci_repo": "git@github.com:tsipa/bpf-tests",
+                "ci_repo": "git@github.com:kernel-patches/vmtest",
                 "ci_branch": "master"
             }
         },
-        "github_oauth_token": "efdgdfgfgddfgfgddfg"
+        "github_oauth_token": "849e74asdasdasadsads40"
     }
 }
