Add requirements.txt for reproducible install
Summary:

Test Plan:

Reviewers:

Subscribers:

Tasks:

Tags:

--- a/sources/config.json
+++ b/sources/config.json
@@ -26,6 +26,6 @@
                 "ci_branch": "master"
             }
         },
-        "github_oauth_token": "849e74asdasdasadsads40"
+        "github_oauth_token": "849etrghrtrt0"
     }
 }
